--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-hola 
+npm install firebase
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyCKsAQneXDL9r7K5AK1e0VIuBHABMZ_8xw",
+  authDomain: "dentalmovilr4-eab7b.firebaseapp.com",
+  projectId: "dentalmovilr4-eab7b",
+  storageBucket: "dentalmovilr4-eab7b.firebasestorage.app",
+  messagingSenderId: "131793404746",
+  appId: "1:131793404746:web:7344255d64a3f2371a37b3",
+  measurementId: "G-KXP1EKWPM3"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
