--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ import { getAnalytics } from "firebase/analytics";
 // Your web app's Firebase configuration
 // For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
-  apiKey: "AIzaSyCKsAQneXDL9r7K5AK1e0VIuBHABMZ_8xw",
+apiKey:import.meta.env.VITE_FIREBASE_API_KEY,
   authDomain: "dentalmovilr4-eab7b.firebaseapp.com",
   projectId: "dentalmovilr4-eab7b",
   storageBucket: "dentalmovilr4-eab7b.firebasestorage.app",
