Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1,34 +1,31 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Dashboard</title>
-</head>
-<body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-</body>
-</html>
-npm install firebase
-// Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
+# 🦷 Sistema de Gestión de Prótesis Dentales - Dentalmovil
 
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-apiKey:import.meta.env.VITE_FIREBASE_API_KEY,
-  authDomain: "dentalmovilr4-eab7b.firebaseapp.com",
-  projectId: "dentalmovilr4-eab7b",
-  storageBucket: "dentalmovilr4-eab7b.firebasestorage.app",
-  messagingSenderId: "131793404746",
-  appId: "1:131793404746:web:7344255d64a3f2371a37b3",
-  measurementId: "G-KXP1EKWPM3"
-};
+![Estado del Build](https://img.shields.io/github/actions/workflow/status/Dentalmovil/NOMBRE_DE_TU_REPO/webpack.yml?branch=main)
+![Vercel](https://img.shields.io/badge/Vercel-Deploy-black?logo=vercel)
 
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
+Este repositorio contiene la plataforma especializada para el seguimiento, diseño y administración de **Prótesis Dentales**. Un enfoque digital para la odontología moderna.
+
+## 📋 Módulos del Proyecto
+* **Registro de Pacientes**: Expediente clínico enfocado en rehabilitación oral.
+* **Gestión de Prótesis**: Seguimiento de estados (Impresión, Prueba de cera, Acrilizado, Entrega).
+* **Catálogo de Materiales**: Control de inventario (Resinas, porcelanas, dientes acrílicos).
+* **Visualización de Casos**: Galería de fotos para el "Antes y Después".
+
+## 🛠️ Stack Tecnológico
+* **React.js**: Para una interfaz reactiva y rápida.
+* **Tailwind CSS**: Para un diseño "Aesthetic" y profesional.
+* **Firebase**: Base de datos en tiempo real para actualizaciones inmediatas.
+
+## ⚙️ Configuración Inicial
+Para trabajar en este repositorio sin errores de "build":
+
+1. Instala las dependencias:
+   `npm install`
+2. Instala Webpack CLI (para evitar errores en GitHub Actions):
+   `npm install --save-dev webpack-cli`
+3. Crea tu archivo `.env` con las credenciales necesarias.
+
+## 📸 Galería
+<p align="center">
+  <img src="URL_DE_TU_FOTO_DE_GOOGLE_O_GITHUB" width="400" alt="Vista Previa Prótesis">
+</p>
